Try to Fix Artifacts
Signed-off-by: Sushrut1101 <guptasushrut@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,4 +56,4 @@ jobs:
          uses: actions/upload-artifact@v3
          with:
             name: NikGapps Package
-            path: Releases/${TARGET_ANDROID_VERSION}/NikGapps*.zip
+            path: Releases/${{ env.TARGET_ANDROID_VERSION }}/NikGapps*.zip
